# hhctrl-mgmt

./: .clang-format  .clang-tidy  .env  .gitignore  .travis-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt  out
iconnect/: CMakeLists.txt
iconnect/bci/: bci.proto
iconnect/eci/: eci_hc.proto
iconnect/pdci/: draft  pdci.proto  pdci_hatch.proto
src/: CMakeLists.txt  app_config.cpp  datetime.hpp  devicetree.cpp  everydays_at_task.hpp  file_task_log.cpp  file_task_log.hpp  file_task_store.cpp  file_task_store.hpp  generic_repeated_task.hpp  ha_hatch_event_handler.cpp  ha_main_board_event_handler.cpp  ha_temp_sensor_event_handler.cpp  hatch.hpp  hatch_handler.cpp  indicator.hpp  led.hpp  led_service.hpp  main.cpp  main_board.cpp  main_board_handler.cpp  pdtree.cpp  polling_service.cpp  repeated_seconds.hpp  repeated_task.hpp  restore.hpp  rgb_indicator.cpp  rgb_led_service.cpp  rgb_led_service.hpp  scheduler.cpp  scheduler.hpp  scheduler2.cpp  scheduler2.hpp  scheduler_durations.hpp  scheduler_helpers.hpp  sheduler.hpp  static_map.hpp  sysfs.hpp  sysfs_cpu_temp_sensor.cpp  sysfs_ds18b20.cpp  (+9 more)
src/app/: CMakeLists.txt  app_config.cpp  home_assistant.cpp  indicator_switcher_init.hpp  logger.cpp  logger.hpp  main.cpp  main2.cpp  main_backup.cpp  main_board_init.hpp
src/common/: CMakeLists.txt
src/common/command/: CMakeLists.txt  base_command.hpp  command_handler_wrapper.hpp  command_id.hpp  command_id_generator.hpp  dispatcher.hpp  requirements.hpp
src/common/coro/: CMakeLists.txt  co_spawn.hpp
src/common/data/: indicator.hpp
src/common/event/: CMakeLists.txt  base_event.hpp  event.hpp  event_bus.hpp  event_id.hpp  event_id_generator.hpp  logger.hpp  requirements.hpp
src/common/executor/: CMakeLists.txt  executor.hpp
src/common/icon/: client.hpp
src/common/logger/: CMakeLists.txt  logger.hpp
src/common/mapper/: indicator_mapper_config.hpp
src/common/scheduler/: CMakeLists.txt  everydays_at_task.hpp  file_task_store.cpp  file_task_store.hpp  generic_repeated_task.hpp  scheduler.cpp  scheduler.hpp  scheduler_durations.hpp  task.hpp  task_store.hpp
src/common/timer/: timer.hpp
src/common/traits/: CMakeLists.txt  tuple_traits.hpp  type_tag.hpp  variant_traits.hpp
src/common/utils/: CMakeLists.txt  capture_fwd.hpp  client.hpp  datetime.hpp  disposable.hpp  enum_mapper.hpp  mapper.hpp  overloaded.hpp  static_map.hpp  sysfs.hpp  type_id.hpp
src/core/: main.cpp
src/device/: CMakeLists.txt  device_id.hpp  device_register.hpp  devicetree.hpp  hardware_identity.hpp  hardware_identity_store.hpp  hatch.hpp  hatch_t.hpp  indicator.hpp  indicator_state.hpp  indicator_t.hpp  indicator_type.hpp  inventory.hpp  led.hpp  led_indicator.hpp  logger.hpp  polling_service.hpp  rgb_indicator.cpp  rgb_indicator.hpp  rgb_led.hpp  rgb_led_t.hpp  sysfs_rgbled.hpp  temp_sensor.hpp  temp_sensor_t.hpp
src/event/: CMakeLists.txt
src/events/: device_created.hpp  device_removed.hpp  device_state_changed.hpp
src/home_assistant/: CMakeLists.txt  availability.hpp  availibility.hpp  device.hpp  device_identity.hpp  device_identity_provider.hpp  entity_factory.hpp  entity_store.hpp  hatch_dev_event_handler.hpp  hatch_dev_handler.hpp  hatch_event_handler.cpp  hatch_handler.cpp  logger.hpp  main_board_event_handler.cpp  main_board_handler.cpp  temp_sensor_event_handler.cpp  temp_sensor_handler.cpp  unique_id.hpp
src/home_assistant/device/: hatch_event_handler.hpp  hatch_handler.hpp  main_board_event_handler.hpp  main_board_handler.hpp  temp_sensor_event_handler.hpp
src/home_assistant/mqtt/: binary_sensor.hpp  button.hpp  client_config.hpp  cover.hpp  device.hpp  entity.hpp  entity_client.hpp  entity_client_config.hpp  entity_client_factory.hpp  entity_config.hpp  entity_def.hpp  entity_error.hpp  sensor.hpp
src/home_assistant/v2/: CMakeLists.txt
src/home_assistant_adapter/: CMakeLists.txt  hatch_event_handler.cpp  hatch_handler.cpp  main_board_event_handler.cpp  main_board_handler.cpp  temp_sensor_event_handler.cpp  temp_sensor_handler.cpp
src/home_assistant_adapter/device/: hatch.cpp  main_board.cpp  temp_sensor.cpp
src/home_assistant_adapter/event/: hatch_event_handler.cpp  main_board_event_handler.cpp  temp_sensor_event_handler.cpp
src/home_assistant_v2/: CMakeLists.txt  error.cpp
src/hw/: bootstrap.cpp
src/hw/board_ctrl/: board_ctrl_server.cpp  board_ctrl_server.hpp
src/hw/drivers/: driver.hpp  hatch.hpp  led.hpp  sysfs.hpp  sysfs_hatch.cpp  sysfs_hatch.hpp  sysfs_led.cpp  sysfs_led.hpp
src/hw/platform_device/: device.hpp  device_access.hpp  (+11 more)
src/inventory/: device_register.hpp  devicetree.hpp  inventory.hpp
src/main_board/: CMakeLists.txt  devicetree.cpp  main_board.cpp  pdtree.cpp  sysfs_cpu_temp_sensor.cpp  sysfs_ds18b20.cpp  sysfs_hatch.cpp  sysfs_led.cpp  sysfs_rgbled.cpp
src/mgmt/: bootstrap.cpp  bootstrap.hpp  main.cpp
src/newnew/: board.hpp  device.hpp  device_id.cpp  device_id.hpp  device_pooler.hpp  device_pooling_manager.cpp  device_pooling_manager.hpp  device_ref_registry.hpp  device_registry.hpp  disposable_device.hpp  hatch.hpp  hatch_pooler.cpp  hatch_pooler.hpp  led.hpp  main_board.hpp  pdtree.cpp  pdtree.hpp  platform_device_loader.hpp  platform_device_scanner.cpp  platform_device_scanner.hpp  rgb3_led.cpp  rgb3_led.hpp  rgb_led.hpp  sysfs_hatch.cpp  sysfs_hatch.hpp  sysfs_led.cpp  sysfs_led.hpp
src/platform_device/: hatch2sr_provider.hpp  platform_builder.hpp  platform_device_provider.hpp  sysfs_rgb_indicator_provider.hpp  sysfs_temp_sensor_provider.hpp
src/poller/: CMakeLists.txt  hatch_poller.hpp  logger.hpp  main_board_poller.hpp  poller_factory.hpp  polling_service.cpp  temp_sensor_poller.hpp
src/static/: hardware_identity.hpp
test/: CMakeLists.txt  gmock_task_store.hpp  main_test.cpp  scheduler_test.cpp  test_main.cpp
test/common/: CMakeLists.txt  command_dispatcher_tests.cpp
test/home_assistant/: CMakeLists.txt  async_entity_client_tests.cpp
test/integration_tests/: CMakeLists.txt
test/unit_tests/: CMakeLists.txt  command_dispatcher_tests.cpp  scheduler_test.cpp  test_main.cpp
(+410 files in other folders)
